tried to solve some layout problem

--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,10 @@ body {
     overflow-x: hidden;
 }
 .txt-xl{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .txt-l{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
 }
 /*-----------------------------------------------HEADER SECTION-----------------------------------------*/
 header>.container {
@@ -26,8 +26,11 @@ header {
     position: relative;
     background-color: #fff;
     z-index: 3;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    /* padding-left: 2.5rem;
+    padding-right: 2.5rem; */
+}
+header img{
+    width: 100px;
 }
 .btn-nav-desktop{
     display: none;
@@ -64,13 +67,13 @@ ul{
 .menu-wrap{
 position: fixed;
 top: 0;
-right: 1.3rem;
+right: 0.4rem;
 z-index: 1;
 }
 .menu-wrap .toggler{
     position: absolute;
     top: 0;
-    right: 1.3rem;
+    right: 0.4rem;
     z-index: 2;
     cursor: pointer;
     width: 50px;
@@ -80,7 +83,7 @@ z-index: 1;
 .menu-wrap .hamburger{
     position: absolute;
     top: 0;
-    right: 1.3rem;
+    right: 0.4rem;
     z-index: 1;
     width: 60px;
     height: 60px;
@@ -209,10 +212,12 @@ button {
     padding-bottom: 3rem;
     text-align: center;
     background-color: hsla(220, 16%, 96%, 1);
+    width: 100%;
 }
 
 .feature>img {
-    width: 5rem;
+    width: 60px;
+    height: 60px;
 }
 .feature-main-txt p{
     margin-bottom: 1rem;
@@ -297,24 +302,7 @@ footer>div{
     margin-bottom: 1rem;
 }
 
-@media(min-width:570px){
-    .nav-desktop{
-        display: block;
-    }
-    .btn-nav-desktop{
-        display: block;
-    }
-    .nav-desktop ul{
-        display: flex;
-        column-gap: 1.5rem;
-    }
-    .menu-wrap{
-        display: none;
-    }
-    ul li a{
-        text-decoration: none;
-        color: #000;
-    }
+@media(min-width:375px){
     #showcase{
         display: flex;
         /* column-gap: 4.5rem; */
@@ -361,13 +349,14 @@ footer>div{
     /* #feature-section>p{
         text-align: left;
     } */
+    
     .feature-container{
         width:80%;
         margin: auto;
     }
     .feature{
         text-align: left;
-
+        width: 100%;
     }
     .features{
         display: flex;
@@ -407,5 +396,24 @@ footer>div{
     }
     .bottom-section small{
         color: hsl(233, 8%, 62%);
+    }
+}
+@media(min-width:470px){
+    .nav-desktop{
+        display: block;
+    }
+    .btn-nav-desktop{
+        display: block;
+    }
+    .nav-desktop ul{
+        display: flex;
+        column-gap: 0.7rem;
+    }
+    .menu-wrap{
+        display: none;
+    }
+    ul li a{
+        text-decoration: none;
+        color: #000;
     }
 }
